feature: aad feature adding new hotel
