# src/main/resources/openAPI/openAPI.yaml
@@ -1,4 +1,4 @@
-openapi: 3.0.0
+openapi: 3.0.3
 info:
   title: Hotel Management API
   description: API for managing hotels, including searching, retrieving, and creating hotel records.
@@ -6,10 +6,25 @@ info:
 servers:
   - url: http://localhost/v1
 paths:
-  /hotels:
+  /property-view/hotels:
     get:
-      summary: Get all hotels
+      summary: Get a list of all hotels
       operationId: getHotels
+      parameters:
+        - name: page
+          in: query
+          required: false
+          description: The page number to retrieve (default is 0)
+          schema:
+            type: integer
+            default: 0
+        - name: size
+          in: query
+          required: false
+          description: The number of items to retrieve per page (default is 10)
+          schema:
+            type: integer
+            default: 10
       responses:
         '200':
           description: A list of hotels with brief information
@@ -19,6 +34,12 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/HotelBrief'
+        '400':
+          description: Bad Request if the parameters are invalid
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDto'
         '500':
           description: Internal Server Error
           content:
@@ -60,7 +81,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorDto'
 
-  /hotels/{id}:
+  /property-view/hotels/{id}:
     get:
       summary: Get detailed information about a specific hotel
       operationId: getHotelById
@@ -91,7 +112,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorDto'
 
-  /search:
+  /property-view/search:
     get:
       summary: Search hotels by various parameters
       operationId: searchHotels
@@ -108,7 +129,7 @@ paths:
           in: query
           schema:
             type: string
-        - name: county
+        - name: country
           in: query
           schema:
             type: string
@@ -138,7 +159,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorDto'
 
-  /hotels/{id}/amenities:
+  /property-view/hotels/{id}/amenities:
     post:
       summary: Add amenities to a hotel
       operationId: addHotelAmenities
@@ -179,7 +200,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorDto'
 
-  /histogram/{param}:
+  /property-view/histogram/{param}:
     get:
       summary: Get count of hotels grouped by specified parameter
       operationId: getHotelHistogram
@@ -187,7 +208,7 @@ paths:
         - name: param
           in: path
           required: true
-          description: Parameter to group by (brand, city, county, amenities)
+          description: Parameter to group by (brand, city, country, amenities)
           schema:
             type: string
       responses:
@@ -221,11 +242,11 @@ paths:
 components:
   schemas:
     HotelBrief:
-      $ref: "./hotel-brief-dto.yaml"
+      $ref: "hotel-brief-dto.yaml#/components/schemas/HotelBrief"
     HotelDetail:
-      $ref: "./hotel-details-dto.yaml"
+      $ref: "hotel-details-dto.yaml#/components/schemas/HotelDetail"
     NewHotel:
-      $ref: "./new-hotel-dto.yaml"
+      $ref: "new-hotel-dto.yaml#/components/schemas/NewHotel"
     ErrorDto:
-      $ref: "./error-dtos.yaml"
+      $ref: "error-dtos.yaml#/components/schemas/ErrorDto"
 
